# vaas

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  run_pipeline.py  run_pipeline_v2.py  setup.py  tax_rag_living_strategy.md  validate_graph.py
docs/: Form_1099DIV_Ontology.md  INDEX.md  SEMANTIC_CORE_V3.md  TAX_METAMODEL_DESIGN.md  TECH_DEBT.md  VISUALIZATION_PLAN.md  graph_query_reference.md  pipeline_walkthrough.md  run_pipeline_refactoring_map.md  stages_1_4_dialectical_analysis.md  stages_5_6_dialectical_analysis.md  stages_7_dialectical_analysis.md  stages_8_9_dialectical_analysis.md  tax_embedding_implementation_plan.md  tax_embedding_technical_overview.md  tax_rag_implementation_reference.md  tax_rag_schema_catalog.md  tax_rag_technical_overview.md
docs/audit/: 00_map.md  01_srp_run_pipeline.md  02_duplication.md  03_pandas.md  05_graph_skeleton_spec.md  06_validation_gaps.md  07_config.md
legacy/: run_pipeline.py
output_run2/: semkg_manifest.json
output_semkg/: semkg_manifest.json
output_semkg_tmp/: compiler_run_metadata.json
src/vaas/: __init__.py  config.py  constants.py  run_pipeline_v2.py  validate_graph.py
src/vaas/core/: __init__.py  atoms.py  (+7 more)
tests/: __init__.py
tests/core/: test_citation_precedence.py  test_pipeline_golden.py
tests/evaluation/: test_integration_real_doc.py  test_validator_falsification.py
tests/semantic/: test_compiler.py  test_precedence.py  test_resolution.py  test_schema_contract.py  test_scope_resolver.py  test_semkg_gates.py  test_typed_edges.py
vaas/: __init__.py
(+48 files in other folders)
