[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaas"
version = "0.1.0"
description = "Tax document intelligence pipeline for IRS forms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.1",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
